# swe-agent-preflight

./: .gitignore  README.md  pyproject.toml
examples/: demo-fail-gate1.yaml  demo-fail-patch-order.yaml  demo-fail-timeout.yaml  demo-pass.yaml
site/: app.js  build.py  dashboard.css  dashboard.js  index.html  index.src.html  sample_receipt.json  styles.css
swe_agent_preflight/: __init__.py  cli.py  doctor.py  errors.py  gates.py  instance.py  planner.py  report.py  runner.py  specs.py  store.py
tests/: __init__.py  test_preflight.py
